tests/neg-custom-args/i12650.scala
trait FooBase {
  type This <: FooBase { type This <: FooBase.this.This } & FooBase { type This <: FooBase.this.This } // error
}